@@ -701,17 +701,16 @@ int remove_mirror_images(struct logical_volume *lv, uint32_t num_mirrors,
 static int _mirrored_lv_in_sync(struct logical_volume *lv)
 {
 	float sync_percent;
+	percent_range_t percent_range;
 
-	if (!lv_mirror_percent(lv->vg->cmd, lv, 0, &sync_percent, NULL)) {
+	if (!lv_mirror_percent(lv->vg->cmd, lv, 0, &sync_percent,
+			       &percent_range, NULL)) {
 		log_error("Unable to determine mirror sync status of %s/%s.",
 			  lv->vg->name, lv->name);
 		return 0;
 	}
 
-	if (sync_percent >= 100.0)
-		return 1;
-
-	return 0;
+	return (percent_range == PERCENT_100) ? 1 : 0;
 }
 
 /*
@@ -1203,6 +1202,7 @@ int remove_mirror_log(struct cmd_context *cmd,
 		      struct dm_list *removable_pvs)
 {
 	float sync_percent;
+	percent_range_t percent_range = PERCENT_0;
 	struct lvinfo info;
 	struct volume_group *vg = lv->vg;
 
@@ -1214,7 +1214,8 @@ int remove_mirror_log(struct cmd_context *cmd,
 
 	/* Had disk log, switch to core. */
 	if (lv_info(cmd, lv, &info, 0, 0) && info.exists) {
-		if (!lv_mirror_percent(cmd, lv, 0, &sync_percent, NULL)) {
+		if (!lv_mirror_percent(cmd, lv, 0, &sync_percent,
+				       &percent_range, NULL)) {
 			log_error("Unable to determine mirror sync status.");
 			return 0;
 		}
@@ -1229,7 +1230,7 @@ int remove_mirror_log(struct cmd_context *cmd,
 	else
 		return 0;
 
-	if (sync_percent >= 100.0)
+	if (percent_range == PERCENT_100)
 		init_mirror_in_sync(1);
 	else {
 		/* A full resync will take place */
@@ -1353,6 +1354,7 @@ int add_mirror_log(struct cmd_context *cmd, struct logical_volume *lv,
 	const struct segment_type *segtype;
 	struct dm_list *parallel_areas;
 	float sync_percent;
+	percent_range_t percent_range;
 	int in_sync;
 	struct logical_volume *log_lv;
 	struct lvinfo info;
@@ -1404,8 +1406,9 @@ int add_mirror_log(struct cmd_context *cmd, struct logical_volume *lv,
 	}
 
 	/* check sync status */
-	if (lv_mirror_percent(cmd, lv, 0, &sync_percent, NULL) &&
-	    sync_percent >= 100.0)
+	if (lv_mirror_percent(cmd, lv, 0, &sync_percent, &percent_range,
+			      NULL) &&
+	    (percent_range == PERCENT_100))
 		in_sync = 1;
 	else
 		in_sync = 0;
